# openapi_description_generator

./: README.md  pyproject.toml  requirements.txt  test.py
src/openapi_description_generator/: __init__.py
